--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel-shift/blueprint": "^2.7",
         "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
+        "laravel/sail": "*",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "pestphp/pest": "^2.0",
